--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
 <body>
 
   <div id="header">
-    <div id="title">
-        <h1>What's Going Down in ChinaTown</h1>
+    <div id="app-title">
+        <h1>Current Weather in ChinaTown</h1>
       </div>
   </div>
 
-  <div id="weather">
-    <h3> Current weather forcast</h3>
+  <div id="weather-app">
     <div id="forecast">
 
     </div>
